Revision history for Perl module Alien::SDL

1.419  Thu Oct 21 2010
     - test for X11/Xlib.h on darwin, disable X if missing [FROGGS]
     - extracting sources and running configure again by default when running Build twice [FROGGS]
     - fixed bug: passing '--without-x' only to package SDL [FROGGS]
     - added sub check_prereqs_tools, checking for pkg-config to build SDL_Pango [FROGGS]

1.418_2  Mon Oct 18 2010
     - patch for ldconfig on BSD [FROGGS]
     - experimental test for X11/Xlib.h on darwin, disable X if missing [FROGGS]
     - disabling any warning for file_find() for perl-5.6.2 [FROGGS]

1.418_1  Fri Oct 15 2010
     - fixed 'invalid version'-error for libtiff [FROGGS]
     - experimental test for X11/Xlib.h on darwin [FROGGS]
     - experimental disabling any warning for file_find() for perl-5.6.2 [FROGGS]

1.418  Thu Oct 14 2010
     - removing SDL_net header check from tests [FROGGS]
     - passing -L/usr/X11R6/lib -I/usr/X11R6/include to all SDL* libs [FROGGS]

1.417  Wed Oct 13 2010
     - Searching for libs/headers in /usr/X11R6/lib+include [FROGGS]
     - Skipping build of zlib in case its already there (fixes OpenBSD unknown-reports) [FROGGS]
     - Skipping SDL_mixer if no GNU Make present [FROGGS]

1.416  Tue Oct 07 2010
     - Added missing patch files [FROGGS]

1.415  Tue Oct 07 2010
     - Using newer config tools for Pango (config.guess, config.sub, install.sh) [FROGGS]

1.414  Tue Sep 28 2010
     - new Win64 binaries [kmx]
     - new repo URL http://github.com/PerlGameDev/Alien-SDL [kmx]
     - Output of header testing is a one-liner now #203 [FROGGS]
     - Removed SDL_net from build system as it isnt needed [FROGGS]

1.413  Fri Aug 06 2010
     - Searching for lib<xxx>.dll.a libs (cygwin needs this) [kmx]
     - New src build set: SDL-1.2.14 & co. (builds only SDL+SDL_*) [kmx]
     - Using File::Fetch 0.24 [FROGGS]
     - Fixed path of libpng-1.4.1 (has changed due to release of libpng-1.5) [FROGGS]